--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,8 @@
     border-top-left-radius: 0rem;
     border-bottom-left-radius: 0rem;
 }
+
+/* .fullScreenPic {
+    max-width: 95vw;
+    /* max-height: 95vh;
+} */
