--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
-$h1-font-size: 2.0rem;
+$h1-font-size: 2rem;
 $h2-font-size: 1.5rem;
 $h3-font-size: 1.2rem;
-$h4-font-size: 1.0rem;
-$h5-font-size: 1.0rem;
-$h6-font-size: 1.0rem;
+$h4-font-size: 1rem;
+$h5-font-size: 1rem;
+$h6-font-size: 1rem;
 
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
