--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,36 @@
     max-width: 100vw;
     max-height: 93vh;
 }
+
+@keyframes pulse {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 0.3;
+    }
+}
+
+.pulse {
+    animation-name: pulse;
+    animation-duration: 0.6s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0.1;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
+    animation-duration: 0.6s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+}
