Formated code and updated LIBRARIES notice file

--- a/src/App.scss
+++ b/src/App.scss
@@ -104,7 +104,7 @@
 }
 
 .mcb-card {
-    background-color: rgba(0,0,0,0.5)
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .mcb-card-img {
@@ -137,15 +137,15 @@
 }
 
 .mcb-ingredient-name {
-    flex: 10
+    flex: 10;
 }
 
 .mcb-ingredient-volume {
-    flex: 3.5
+    flex: 3.5;
 }
 
 .mcb-ingredient-unit {
-    flex: 5
+    flex: 5;
 }
 
 .mcb-transparent-border {
