--- a/src/main.scss
+++ b/src/main.scss
@@ -5,4 +5,4 @@ $h4-font-size: 1rem;
 $h5-font-size: 1rem;
 $h6-font-size: 1rem;
 
-@import '/node_modules/bootstrap/scss/bootstrap.scss';
+@import 'bootstrap/dist/css/bootstrap.min.css'
